Thu Sep  9 15:12:36 PDT 1999 Manish Singh <yosh@gimp.org>

	* plug-ins/imagemap/imap_polygon.c: fix gccism

Thu Sep  9 22:23:06 CET 1999  vidar@prosalg.no  (Vidar Madsen)

	* plug-ins/common/spheredesigner.c: Various fixes/enhancements

	* plug-ins/gimpressionist/ChangeLog
	* plug-ins/gimpressionist/Makefile.am
	* plug-ins/gimpressionist/*.[ch]: Added Color options (new file color.c)

1999-09-09  Tomas Ogren  <stric@ing.umu.se>

	* app/Makefile.am: Add the path_tool* here, makes gimp compile

Thu Sep  9 21:02:46 MEST 1999  Sven Neumann <sven@gimp.org>

	* app/airbrush.c
	* app/gimpbrushpipe.[ch]
	* app/paint_core.[ch]
	* app/paintbrush.c
	* app/pencil.c: scaling of brush pipes should now work correctly.
	Needs a little bit of optimization though...

Thu Sep  9 19:16:25 MEST 1999  Simon Budig <Simon.Budig@unix-ag.org>
                               (checked in by Sven Neumann <sven@gimp.org>)

        * app/tools.c
        * app/toolsF.h
        * app/path_tool.c
        * app/path_tool.h
        * app/path_toolP.h

        New tool, should become a replacement for the bezier_select tool.
        This is the start for a more general Path-tool. It will provide
        (sometime :-) functions to manipulate a path, constructed from
        curves (open or closed), which in turn are constructed from segments.

        These segments could be lots of differen types, as a start 
	bezier-curves are planned and Austin Donelly is probably
	interested in using it for intelligent scissors. It will be
	possible to mix bezier- and intelligent-scissors-segments in a
	path - but currently I'm missing for a good UI-Idea.

        This tool is far from complete, currently it is only possible to
        create a single open curve. It is possible to manipulate an anchor 
	by clicking on it and dragging it around. Multiple anchors can be 
	selected by shift-clicking on an anchor. You can drag multiple 
	anchors around.
