@@ -1,6 +1,7 @@
 #include <stdlib.h>
 #include <time.h>
 #include <math.h>
+#include "gimpressionist.h"
 #include "ppmtool.h"
 
 int pfix(int n)
@@ -26,20 +27,20 @@ void mkplasma_sub(struct ppm *p, int x1, int x2, int y1, int y2, float turb)
   ny = (y1+y2)/2;
   if(!PIXEL(y1,nx,r))
     PIXEL(y1,nx,r) = pfix((PIXEL(y1,x1,r)+PIXEL(y1,x2,r))/2.0+
-                           turb*(rand()%xr-xr/2.0));
+                           turb*(RAND_FUNC()%xr-xr/2.0));
   if(!PIXEL(y2,nx,r))
     PIXEL(y2,nx,r) = pfix((PIXEL(y2,x1,r)+PIXEL(y2,x2,r))/2.0+
-                           turb*(rand()%xr-xr/2.0));
+                           turb*(RAND_FUNC()%xr-xr/2.0));
   if(!PIXEL(ny,x1,r))
     PIXEL(ny,x1,r) = pfix((PIXEL(y1,x1,r)+PIXEL(y2,x1,r))/2.0+
-                         turb*(rand()%yr-yr/2.0));
+                         turb*(RAND_FUNC()%yr-yr/2.0));
   if(!PIXEL(ny,x2,r))
     PIXEL(ny,x2,r) = pfix((PIXEL(y1,x2,r)+PIXEL(y2,x2,r))/2.0+
-                         turb*(rand()%yr-yr/2.0));
+                         turb*(RAND_FUNC()%yr-yr/2.0));
   if(!PIXEL(ny,nx,r))
     PIXEL(ny,nx,r) = 
       pfix((PIXEL(y1,x1,r)+PIXEL(y1,x2,r)+PIXEL(y2,x1,r)+
-            PIXEL(y2,x2,r))/4.0+turb*(rand()%(xr+yr)/2.0-(xr+yr)/4.0));
+            PIXEL(y2,x2,r))/4.0+turb*(RAND_FUNC()%(xr+yr)/2.0-(xr+yr)/4.0));
 
   if(xr>1) {
     mkplasma_sub(p,x1,nx,y1,ny, turb);
@@ -60,10 +61,10 @@ void mkplasma_red(struct ppm *p, float turb)
     for(y = 0; y < p->height; y++)
       PIXEL(y,x,0) = 0;
   x--; y--;
-  PIXEL(0,0,0) = 1+rand()%255;
-  PIXEL(y,0,0) = 1+rand()%255;
-  PIXEL(0,x,0) = 1+rand()%255;
-  PIXEL(y,x,0) = 1+rand()%255;
+  PIXEL(0,0,0) = 1+RAND_FUNC()%255;
+  PIXEL(y,0,0) = 1+RAND_FUNC()%255;
+  PIXEL(0,x,0) = 1+RAND_FUNC()%255;
+  PIXEL(y,x,0) = 1+RAND_FUNC()%255;
   mkplasma_sub(p, 0, x, 0, y, turb);
 }
 
